/user route implemented
/api/user/current route configured.
/api/user/themes route configured.
/api/user/delete route configured.
/api/user/help route configured.
/api/user/update route configured.
